--- a/jekyll/_layouts/halfpage.html
+++ b/jekyll/_layouts/halfpage.html
@@ -11,7 +11,7 @@
 						<header>
 							<div class="inner">
 								<h2>{{ page.title }}</h2>
-								<!--<p>{{ page.excerpt }}</p>-->
+								<p>{{ page.date | date: "%Y-%m-%d" }}</p>
 							</div>
 						</header>
 
