Added date to news title on index pages.

--- a/jekyll/_layouts/onepage.html
+++ b/jekyll/_layouts/onepage.html
@@ -95,7 +95,7 @@
 										{% if post.post_img_url != "" %}
 								    		<a href="{{ post.url }}" class="image"><img src="{{ post.post_img_url }}" alt="" /></a>
 								    	{% endif; %}
-										<h3 class="major">{{ post.title }}</h3>
+										<h3 class="major">{{ post.date | date: "%Y-%m-%d" }} {{ post.title }}</h3>
 										{{ post.excerpt }}
 										<a href="{{ post.url }}" class="special">{% t 'read_more' %}</a>
 								    </article>
