sayas as link; added wmii calendar to footer

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -4,7 +4,7 @@
 
 		<p>{% t 'frontpage.section_contact.text' %}</p>
 
-		<form><iframe src="https://sayat.me/widget/KSI" frameborder="0" scrolling="no"  id="sayat"><p>Podziel się z nami opinią lub skontaktuj się - <em>Anonimowość Gwarantowana</em><sup>TM</sup>: <a href="//sayat.me/KSI">sayat.me</a></p></iframe></form>
+		<form><iframe src="https://calendar.google.com/calendar/embed?src=p5ogqlukk7i3fje12hghv0f854@group.calendar.google.com&ctz=Europe/Warsaw&pli=1" frameborder="0" scrolling="no"  id="wmii_calndar"><p><a href="https://calendar.google.com/calendar/embed?src=p5ogqlukk7i3fje12hghv0f854@group.calendar.google.com&ctz=Europe/Warsaw&pli=1">Kalendarz WMiI UJ</iframe></form>
 
 		<ul class="contact">
 			<li class="fa-home">
@@ -14,7 +14,10 @@
 			</li>
 
 			<li class="fa-phone">12 664-76-49</li>
+			<br />
 			<li class="fa-envelope"><a href="mailto:ksi@uj.edu.pl">ksi@uj.edu.pl</a></li>
+			<li class="fa-envelope"><a href="http://sayat.me/ksi">Anonimowa opinia - sayat.me/ksi</a></li>
+			<br />
 			<li class="fa-facebook"><a href="https://facebook.com/ksi.uj">facebook.com/ksi.uj</a></li>
 			<li class="fa-instagram"><a href="https://instagram.com/ksiuj">instagram.com/ksiuj</a></li>
 			<li class="fa-github"><a href="https://github.com/KSIUJ">github.com/KSIUJ</a></li>
