--- a/jekyll/_sass/layout/_footer.scss
+++ b/jekyll/_sass/layout/_footer.scss
@@ -141,10 +141,10 @@
 			}
 		}
 
-		#sayat {
-			width:400px; 
-			height:330px; 
-			border:0; 
+		#wmii_calndar {
+			width:450px;
+			height:350px;
+			border:0;
 			overflow:hidden;
 			max-width: 100%;
 		}
