fix http in https enabled website

--- a/jekyll/_includes/skel_begin.html
+++ b/jekyll/_includes/skel_begin.html
@@ -6,8 +6,8 @@
 
 	Adapted for KSI by KSI - ksi.ii.uj.edu.pl
 -->
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:fb="http://ogp.me/ns/fb#">
+<html xmlns="//www.w3.org/1999/xhtml"
+      xmlns:fb="//ogp.me/ns/fb#">
 	<head>
 		<title>{{ page.title }} - KSI UJ</title>
 		<meta charset="utf-8" />
