--- a/jekyll/_includes/skel_begin.html
+++ b/jekyll/_includes/skel_begin.html
@@ -9,7 +9,7 @@
 <html xmlns="//www.w3.org/1999/xhtml"
       xmlns:fb="//ogp.me/ns/fb#">
 	<head>
-		<title>{{ page.title }} - KSI UJ</title>
+		<!--<title>{{ page.title }} - KSI UJ</title>-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,5 +19,7 @@
 		<meta property="og:image" content="/images/logo_for_fb.png" />
 		<link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32" />
 		<link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16" />
+
+    {% seo %}
 	</head>
 	<body>
