--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -1,42 +1,42 @@
 <section id="footer">
-	<div class="inner">
-		<h2 class="major">{% t 'frontpage.section_contact.title' %}</h2>
+    <div class="inner">
+        <h2 class="major">{% t 'frontpage.section_contact.title' %}</h2>
+        <ul class="contact">
+            <li class="fa-home">
+                Koło Studentów Informatyki UJ<br/>
+                ul. Łojasiewicza 6 pok. 1173<br/>
+                30-348 Kraków
+            </li>
+            <li class="fa-phone">12 664-76-49</li>
+            <br/>
+            <li class="fa-envelope"><a href="mailto:ksi@uj.edu.pl">ksi@uj.edu.pl</a></li>
+            <li class="fa-envelope"><a href="http://sayat.me/ksi">Anonimowa opinia - sayat.me/ksi</a></li>
+            <br/>
+            <li class="fa-facebook"><a href="https://facebook.com/ksi.uj">facebook.com/ksi.uj</a></li>
+            <li class="fa-instagram"><a href="https://instagram.com/ksiuj">instagram.com/ksiuj</a></li>
+            <li class="fa-github"><a href="https://github.com/KSIUJ">github.com/KSIUJ</a></li>
+        </ul>
 
-		<p>{% t 'frontpage.section_contact.text' %}</p>
-
-		<form><iframe src="https://calendar.google.com/calendar/embed?src=p5ogqlukk7i3fje12hghv0f854@group.calendar.google.com&ctz=Europe/Warsaw&pli=1" frameborder="0" scrolling="no"  id="wmii_calndar"><p><a href="https://calendar.google.com/calendar/embed?src=p5ogqlukk7i3fje12hghv0f854@group.calendar.google.com&ctz=Europe/Warsaw&pli=1">Kalendarz WMiI UJ</iframe></form>
-
-		<ul class="contact">
-			<li class="fa-home">
-				Koło Studentów Informatyki UJ<br />
-				ul. Łojasiewicza 6 pok. 1173<br />
-				30-348 Kraków
-			</li>
-
-			<li class="fa-phone">12 664-76-49</li>
-			<br />
-			<li class="fa-envelope"><a href="mailto:ksi@uj.edu.pl">ksi@uj.edu.pl</a></li>
-			<li class="fa-envelope"><a href="http://sayat.me/ksi">Anonimowa opinia - sayat.me/ksi</a></li>
-			<br />
-			<li class="fa-facebook"><a href="https://facebook.com/ksi.uj">facebook.com/ksi.uj</a></li>
-			<li class="fa-instagram"><a href="https://instagram.com/ksiuj">instagram.com/ksiuj</a></li>
-			<li class="fa-github"><a href="https://github.com/KSIUJ">github.com/KSIUJ</a></li>
-		</ul>
-
-		<ul class="copyright">
-			<li>&copy; Daniel Skowroński &amp; KSI UJ All rights reserved.</li>
-			<li>Original design: <a href="http://html5up.net">HTML5 UP</a></li>
-			<li>Fork it on <a href="https://github.com/KSIUJ/www.ksi">GitHub</a></li>
-		</ul>
-	</div>
+        <ul class="copyright">
+            <li>&copy; KSI UJ All rights reserved.</li>
+            <li>Original design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+    </div>
 </section>
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-79593724-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-79593724-1', 'auto');
+    ga('send', 'pageview');
 </script>
