--- a/jekyll/_includes/skel_begin.html
+++ b/jekyll/_includes/skel_begin.html
@@ -9,6 +9,15 @@
 <html xmlns="//www.w3.org/1999/xhtml"
       xmlns:fb="//ogp.me/ns/fb#">
 	<head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85101492-2"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-85101492-2');
+        </script>
+
 		<!--<title>{{ page.title }} - KSI UJ</title>-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
