--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -17,7 +17,7 @@
         <div class="wrapper">
             <div class="inner">
                 {% if page.data != "" %}
-                <p>{{ page.date | date: "%Y-%m-%d" }}</p>
+                <h3>{{ page.date | date: "%Y-%m-%d" }}</h3>
                 {% endif; %}
                 {% if page.post_img_url != "" %}
                 <p><img src="{{page.post_img_url}}" id="post_img"/></p>
@@ -34,5 +34,4 @@
     {% include footer.html %}
 
 </div>
-{% include jquery.html %}
 {% include skel_end.html %}
