--- a/jekyll/_layouts/list.html
+++ b/jekyll/_layouts/list.html
@@ -28,7 +28,7 @@
                         {% for post in paginator.posts %}
                         <article>
                             {% if post.post_img_url != "" %}
-                            <a href="{{ post.url }}" class="image"><img src="{{ post.post_img_url }}" alt="" /></a>
+                            {% picture halfpage {{ post.post_img_url }} --link {{ post.url }} --a class="image" %}
                             {% endif; %}
                             <h3 class="major">{{ post.date | date: "%d.%m.%Y" }}</h3>
                             {{ post.excerpt | strip_html | truncatewords: 50 }}
