Remove IE9 and bellow support

--- a/jekyll/_includes/skel_begin.html
+++ b/jekyll/_includes/skel_begin.html
@@ -8,27 +8,31 @@
 -->
 <html xmlns="//www.w3.org/1999/xhtml"
       xmlns:fb="//ogp.me/ns/fb#">
-	<head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85101492-2"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'UA-85101492-2');
-        </script>
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-85101492-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-		<!--<title>{{ page.title }} - KSI UJ</title>-->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
-		<meta property="og:image" content="/images/logo_for_fb.png" />
-		<link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32" />
-		<link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16" />
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-85101492-2');
+    </script>
+
+    <!--<title>{{ page.title }} - KSI UJ</title>-->
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="/css/main.css"/>
+    <meta property="og:image" content="/images/logo_for_fb.png"/>
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16"/>
 
     {% seo %}
-	</head>
-	<body>
+</head>
+<body>
+<!--[if lte IE 9]>
+<h1 style="margin-top: 100px">Your browser version is awfully out of date and is not supported!</h1>
+<![endif]-->
