--- a/jekyll/_layouts/list.html
+++ b/jekyll/_layouts/list.html
@@ -41,13 +41,13 @@
                 {% if paginator.total_pages > 1 %}
                 <ul class="pager">
                     {% if paginator.previous_page %}
-                    <li class="previous">
-                        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"><i class="fa fa-arrow-circle-left"></i> {% t 'list.next' %}</a>
+                    <li>
+                        <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="next">{% t 'list.next' %}</a>
                     </li>
                     {% endif %}
                     {% if paginator.next_page %}
-                    <li class="next">
-                        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">{% t 'list.previous' %} <i class="fa fa-arrow-circle-right"></i></a>
+                    <li>
+                        <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="previous">{% t 'list.previous' %}</a>
                     </li>
                     {% endif %}
                 </ul>
