--- a/jekyll/_includes/skel_end.html
+++ b/jekyll/_includes/skel_end.html
@@ -1,6 +1,7 @@
 <!-- Scripts -->
-<script src="/js/skel.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/jquery.scrollex.min.js"></script>
+<script src="/js/browser.min.js"></script>
+<script src="/js/breakpoints.min.js"></script>
 <script src="/js/util.js"></script>
 <script src="/js/main.js"></script>
