--- a/jekyll/_sass/base/_page.scss
+++ b/jekyll/_sass/base/_page.scss
@@ -1,49 +1,59 @@
 ///
 /// Solid State by HTML5 UP
-/// html5up.net | @n33co
+/// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
 /* Basic */
 
-	// MSIE: Required for IEMobile.
-		@-ms-viewport {
-			width: device-width;
-		}
+// MSIE: Required for IEMobile.
+@-ms-viewport {
+  width: device-width;
+}
 
-	// MSIE: Prevents scrollbar from overlapping content.
-		body {
-			-ms-overflow-style: scrollbar;
-		}
+// MSIE: Prevents scrollbar from overlapping content.
+body {
+  -ms-overflow-style: scrollbar;
+}
 
-	// Ensures page width is always >=320px.
-		@include breakpoint(xsmall) {
-			html, body {
-				min-width: 320px;
-			}
-		}
+// Ensures page width is always >=320px.
+@include breakpoint('<=xsmall') {
+  html, body {
+    min-width: 320px;
+  }
+}
 
-	body {
-		background-color:		_palette(bg);
+// Set box model to border-box.
+// Based on css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
+html {
+  box-sizing: border-box;
+}
 
-		background-image:		linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-								url('../../images/temp_top_img.png');
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
-		background-size:		auto,
-								cover;
+body {
+  background-color: _palette(bg);
 
-		background-attachment:	fixed,
-								fixed;
+  background-image: linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
+  url('../../images/temp_top_img.png');
 
-		background-position:	center,
-								center;
+  background-size: auto,
+  cover;
 
-		// Prevents animation/transition "flicker" on page load.
-		// Automatically added/removed by js/main.js.
-			&.is-loading {
-				*, *:before, *:after {
-					@include vendor('animation', 'none !important');
-					@include vendor('transition', 'none !important');
-				}
-			}
-	}
+  background-attachment: fixed,
+  fixed;
+
+  background-position: center,
+  center;
+
+  // Stops initial animations until page loads.
+  &.is-preload {
+    *, *:before, *:after {
+      @include vendor('animation', 'none !important');
+      @include vendor('transition', 'none !important');
+    }
+  }
+
+}
