--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -1,68 +1,59 @@
 ---
-# this ensures Jekyll reads the file to be transformed into CSS later
-# only Main files contain this front matter, not partials.
 ---
 
-@import 'libs/vars';
-@import 'libs/functions';
-@import 'libs/mixins';
-@import 'libs/skel';
-@import 'libs/photoShower';
+@import '../_sass/libs/vars';
+@import '../_sass/libs/functions';
+@import '../_sass/libs/mixins';
+@import '../_sass/libs/vendor';
+@import '../_sass/libs/breakpoints';
+@import '../_sass/libs/html-grid';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,700|Source+Sans+Pro:300,600,300italic,600italic');
 
 /*
 	Solid State by HTML5 UP
-	html5up.net | @n33co
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-
-	Adapted for KSI by KSI - ksi.ii.uj.edu.pl
 */
 
-/* keep this synced with /js/main.js */
-@include skel-breakpoints((
-        xlarge: '(max-width: 1680px)',
-        large: '(max-width: 1280px)',
-        menucritical: '(max-width: 1170px)',
-        medium: '(max-width: 980px)',
-        small: '(max-width: 736px)',
-        xsmall: '(max-width: 640px)',
-        xxsmall: '(max-width: 360px)'
-));
+// Breakpoints.
 
-@include skel-layout((
-        reset: 'full',
-        boxModel: 'border',
-        grid: (gutters: 1.75em),
-        breakpoints: (
-                small: (
-                        grid: (gutters: 1.25em)
-                )
-        )
+@include breakpoints((
+        xlarge: (1281px, 1680px),
+        large: (981px, 1280px),
+        medium: (737px, 980px),
+        small: (481px, 736px),
+        xsmall: (361px, 480px),
+        xxsmall: (null, 360px)
 ));
 
 // Base.
 
-@import 'base/page';
-@import 'base/typography';
+@import '../_sass/base/reset';
+@import '../_sass/base/page';
+@import '../_sass/base/typography';
 
 // Component.
 
-@import 'components/section';
-@import 'components/form';
-@import 'components/box';
-@import 'components/icon';
-@import 'components/image';
-@import 'components/list';
-@import 'components/table';
-@import 'components/button';
-@import 'components/features';
-@import "components/pager";
+@import '../_sass/components/row';
+@import '../_sass/components/section';
+@import '../_sass/components/form';
+@import '../_sass/components/box';
+@import '../_sass/components/icon';
+@import '../_sass/components/image';
+@import '../_sass/components/list';
+@import '../_sass/components/actions';
+@import '../_sass/components/icons';
+@import '../_sass/components/contact';
+@import '../_sass/components/pagination';
+@import '../_sass/components/table';
+@import '../_sass/components/button';
+@import '../_sass/components/features';
 
 // Layout.
 
-@import 'layout/header';
-@import 'layout/menu';
-@import 'layout/banner';
-@import 'layout/wrapper';
-@import 'layout/footer';
+@import '../_sass/layout/header';
+@import '../_sass/layout/menu';
+@import '../_sass/layout/banner';
+@import '../_sass/layout/wrapper';
+@import '../_sass/layout/footer';
