--- a/jekyll/_includes/menu.html
+++ b/jekyll/_includes/menu.html
@@ -1,4 +1,4 @@
-<header id="header" class="not-alt"> <!-- alt class enables old mode: initially disabled, shows after #banner -->
+<header id="header" class="non-alt">
     <h1><a href="/">KSI UJ</a></h1>
     <div id="social-icons">
         <a href="https://facebook.com/ksi.uj" class="fa-facebook"></a>
