--- a/jekyll/_sass/base/_page.scss
+++ b/jekyll/_sass/base/_page.scss
@@ -37,7 +37,7 @@ body {
   background-color: _palette(bg);
 
   background-image: linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-  url('../../images/temp_top_img.png');
+  url('../../images/base/top_img.jpg');
 
   background-size: auto,
   cover;
