--- a/jekyll/_sass/layout/_banner.scss
+++ b/jekyll/_sass/layout/_banner.scss
@@ -76,7 +76,7 @@
     background-color: _palette(bg);
 
     background-image: linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-    url('../../images/temp_top_img2.png');
+    url('../../images/base/top_img2.jpg');
 
     background-size: auto,
     cover;
