--- a/jekyll/_sass/layout/_footer.scss
+++ b/jekyll/_sass/layout/_footer.scss
@@ -63,7 +63,7 @@
     background-color: _palette(bg);
 
     background-image: linear-gradient(to top, transparentize(_palette(bg), 0.2), transparentize(_palette(bg), 0.2)),
-    url('../../images/temp_top_img3.png');
+    url('../../images/base/top_img3.jpg');
 
     background-size: auto,
     cover;
