--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -20,7 +20,7 @@
                 <h3>{{ page.date | date: "%Y-%m-%d" }}</h3>
                 {% endif; %}
                 {% if page.post_img_url != "" %}
-                <p>{% picture fullpage {{page.post_img_url}} id="post_img" %}</p>
+                <span class="image fit align-center">{% picture fullpage {{page.post_img_url}} class="post-img" %}</span>
                 {% endif; %}
 
                 {{ content }}
