--- a/jekyll/_sass/components/_image.scss
+++ b/jekyll/_sass/components/_image.scss
@@ -6,8 +6,12 @@
 
 /* Image */
 
-#post_img {
+.post-img {
+  width: auto !important;
   max-width: 100%;
+  max-height: 25em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .image {
