Fix mobile menu

--- a/jekyll/_includes/menu.html
+++ b/jekyll/_includes/menu.html
@@ -5,7 +5,7 @@
         <a href="https://instagram.com/ksiuj" class="fa-instagram"></a>
         <a href="https://github.com/KSIUJ" class="fa-github"></a>
     </div>
-    <nav>
+    <nav id="menu">
         <a href="#menu" id="menu-button">Menu</a>
         <ul class="links">
             <li><a href="/">{% t 'menu.homepage' %}</a></li>
