--- a/jekyll/_includes/menu.html
+++ b/jekyll/_includes/menu.html
@@ -12,7 +12,7 @@
             <li><a href="/news/">{% t 'menu.news' %}</a></li>
             <li><a href="/about/">{% t 'menu.about' %}</a></li>
             <li><a href="/history/">{% t 'menu.history' %}</a></li>
-            <li><a href="/events/">{% t 'menu.events' %}</a></li>
+            <li><a href="/{{ page.language }}/events/">{% t 'menu.events' %}</a></li>
             <li><a href="/projects/">{% t 'menu.projects' %}</a></li>
             <li><a href="#footer">{% t 'menu.contact' %}</a></li>
             <li><a href="/pl/">PL</a>/<a href="/en/">EN</a></li>
