--- a/jekyll/_sass/layout/_wrapper.scss
+++ b/jekyll/_sass/layout/_wrapper.scss
@@ -175,6 +175,13 @@
       overflow: hidden;
       -ms-flex: 1;
 
+      &.alt {
+        border-radius: _size(border-radius);
+        img {
+          border-radius: _size(border-radius);
+        }
+      }
+
       img {
         border-radius: 100%;
         width: 100%;
