Fix section css order

--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -23,6 +23,9 @@
         </header>
 
         <!-- Content -->
+        <section>
+            <!-- leave empty -->
+        </section>
         {{ content }}
 
     </section>
