Update about and projects

--- a/jekyll/_includes/skel_end.html
+++ b/jekyll/_includes/skel_end.html
@@ -2,3 +2,4 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/breakpoints.min.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/history.js"></script>
