--- a/jekyll/_sass/components/_list.scss
+++ b/jekyll/_sass/components/_list.scss
@@ -29,6 +29,11 @@ ul {
     padding-left: 0.5em;
   }
 
+  &.clean {
+    list-style: none;
+    padding-left: 0;
+  }
+
   &.alt {
     list-style: none;
     padding-left: 0;
