--- a/jekyll/css/main.scss
+++ b/jekyll/css/main.scss
@@ -49,6 +49,7 @@
 @import '../_sass/components/table';
 @import '../_sass/components/button';
 @import '../_sass/components/features';
+@import '../_sass/components/history';
 
 // Layout.
 
